Add link to Datahjelpen

--- a/index.html
+++ b/index.html
@@ -146,5 +146,12 @@
         >https://www.datasikkerhetsboka.no/blogg/2016/08/04/to-faktor-autentisering/</a
       >
     </p>
+    <footer>
+      <br />
+      <br />
+      <br />
+      <p>Nettside av <a href="https://datahjelpen.no/">Datahjelpen AS</a></p>
+      <br />
+    </footer>
   </body>
 </html>
