Add meta information header

--- a/index.html
+++ b/index.html
@@ -64,14 +64,28 @@
       a {
         word-wrap: break-word;
       }
+
+      hr {
+        width: 100%;
+        height: 1px;
+        background-color: #000;
+        margin: 1em auto 2em;
+        padding: 0;
+        border: none;
+      }
     </style>
   </head>
   <body>
-    <h1>Tofaktorautentisering (2fa)</h1>
-    <p>
-      Du har sikkert hørt flere ganger at du bør aktivere to-faktor-autentisering (eller to-trinns-bekreftelse som det
-      også kalles). Med hva er det, og hvordan aktiverer man det? Det skal vi forsøke svare på i denne artikkelen.
-    </p>
+    <header>
+      <h1>To-faktor-autentisering (2fa)</h1>
+      <p>Artikkel lengde: 3 minutter (~700 ord)</p>
+      <p>Sist oppdatert: 2021-06-09 19:22 GMT+1</p>
+      <hr />
+      <p>
+        Du har sikkert hørt flere ganger at du bør aktivere to-faktor-autentisering (eller to-trinns-bekreftelse som det
+        også kalles). Med hva er det, og hvordan aktiverer man det? Det skal vi forsøke svare på i denne artikkelen.
+      </p>
+    </header>
     <p>
       Faktisk har du nok brukt to-faktor-autentisering allerede. BankID er det mest kjente eksemplet. For å logge inn
       kreves det to ulike ting. Det krevet noe du vet (altså passordet ditt) og noe du har (altså passordkalkulator
