--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       h1,
       h2 {
         word-wrap: break-word;
+        overflow-wrap: break-word;
+        -webkit-hyphens: auto;
+        -moz-hyphens: auto;
+        hyphens: auto;
       }
 
       h1 {
@@ -59,6 +63,11 @@
 
       p {
         margin: 1em auto 0;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        -webkit-hyphens: auto;
+        -moz-hyphens: auto;
+        hyphens: auto;
       }
 
       a {
